<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uottawa.keenan.cookhelper.Help">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/helpTextView"
            android:textSize="36dp"
            android:layout_weight="0.02"
            android:text="@string/Help" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/creatorsTextView"
            android:textSize="24dp"
            android:layout_weight="0.02"
            tools:text="@string/Team" />

        <TextView
            android:text="@string/aly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/alyTextView"
            android:textSize="18dp"
            tools:text="@string/aly"
            android:layout_weight="0.02" />

        <TextView
            android:text="@string/harrison"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/harrisonTextView"
            android:textSize="18dp"
            tools:text="@string/harrison"
            android:layout_weight="0.02" />

        <TextView
            android:text="@string/hasnain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/hasnainTextView"
            android:textSize="18dp"
            tools:text="@string/hasnain"
            android:layout_weight="0.02" />

        <TextView
            android:text="@string/karim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/karimTextView"
            android:textSize="18dp"
            tools:text="@string/karim"
            android:layout_weight="0.02" />

        <TextView
            android:text="@string/keenan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/keenanTextView"
            android:textSize="18dp"
            tools:text="@string/keenan"
            android:layout_weight="0.02" />


    </LinearLayout>
</RelativeLayout>
