<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uottawa.keenan.cookhelper.AddRecipe"
    android:isScrollContainer="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_vertical_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/AddARecipe"
                android:id="@+id/add_a_recipe_label"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif" />

            <TextView
                android:text="@string/EnterRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_name_textview"
                android:textStyle="normal|bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/recipe_name_edittext"
                android:hint="@string/HintRecipeName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterIngredients"
                android:id="@+id/choose_ingredients_label"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ingredients_layout">

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ingredient_elements_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_ingredient_editText"
                    android:layout_weight="1"
                    android:hint="@string/HintIngredients"
                    android:textAllCaps="false"
                    android:inputType="textCapSentences" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AddIngredient"
                    android:id="@+id/add_ingredient_btn"
                    android:layout_weight="1"
                    android:onClick="OnAddIngredient"
                    android:theme="@style/BlueButon"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EnterSteps"
                android:id="@+id/enter_steps_label"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recipe_steps_layout"></LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/enter_step_editText"
                android:hint="@string/HintStep" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recipe_save_step_btn_layout"></LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/delete_step_btn_layout"></LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recipe_add_step_btn_layout">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AddStep"
                    android:id="@+id/add_recipe_step_btn"
                    android:onClick="OnAddStep"
                    android:theme="@style/BlueButon"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CatType"
                android:id="@+id/category_and_type_label"
                android:layout_weight="1"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:layout_width="match_parent"
                    android:id="@+id/category_spinner"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/type_spinner"
                    android:layout_weight="1" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/category_or_type_editText"
                android:layout_weight="1"
                android:hint="@string/CategoryType" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/add_type_category_layout">

                <Button
                    android:text="@string/AddCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_category_btn"
                    android:layout_weight="1"
                    android:onClick="OnAddCategory"
                    android:theme="@style/BlueButon"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"/>

                <Button
                    android:text="@string/AddType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_type_btn"
                    android:layout_weight="1"
                    android:onClick="OnAddType"
                    android:theme="@style/BlueButon"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/add_edit_recipe_layout">

                <Button
                    android:text="@string/AddRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_current_recipe_btn"
                    android:layout_weight="1"
                    android:onClick="OnAddRecipe"
                    android:theme="@style/OrangeButton"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"/>

                <Button
                    android:text="@string/EditContents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_current_recipe_button"
                    android:layout_weight="1"
                    android:onClick="OnEditCurrentRecipe"
                    android:theme="@style/RedButton"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
