<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uottawa.keenan.cookhelper.FindRecipe">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/category_textView"
                android:layout_weight="1"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_textView"
                android:layout_weight="1"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/category_spinner"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type_spinner"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/and_ingredients_editText"
            android:hint="@string/andIngredients" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/not_ingredients_editText"
            android:hint="@string/not_ingredients" />

        <Button
            android:text="@string/Search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_btn"
            android:onClick="OnSearch"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="18sp" />

        <TextView
            android:text="@string/Results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/results_textView"
            android:elevation="1dp"
            android:textStyle="normal|bold" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/search_results_listview" />

    </LinearLayout>

</RelativeLayout>
