<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uottawa.keenan.cookhelper.Homescreen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app_logo_img"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/cookhelper_app_logo"
            android:adjustViewBounds="true"
            android:maxWidth="200dp"
            android:longClickable="false"
            android:maxHeight="200dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/AddRecipe"
                android:id="@+id/add_recipe_btn"
                android:onClick="OnAddRecipe"
                android:layout_weight="1"
                android:theme="@style/BlueButon"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SearchRecipe"
                android:id="@+id/search_recipe_btn"
                android:onClick="OnFindRecipe"
                android:layout_weight="1"
                android:theme="@style/BlueButon"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/AllRecipes"
                android:id="@+id/all_recipes_btn"
                android:onClick="OnAllRecipes"
                android:theme="@style/BlueButon"
                android:textColor="@android:color/background_light"
                android:layout_weight="1"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Help"
                android:id="@+id/help_btn"
                android:onClick="OnHelp"
                android:layout_weight="1"
                android:theme="@style/OrangeButton"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
