<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recipe_list_content"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uottawa.keenan.cookhelper.RecipeArrayAdapter"
    android:layout_height="100dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/recipe_result_item"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_result_name"
                android:layout_weight="1"
                android:text="@string/Placeholder"
                android:textSize="20sp"
                android:textAlignment="textStart"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/CategoryColon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_category"
                android:layout_weight="1"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/Placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_result_cate"
                android:layout_weight="1" />

            <TextView
                android:text="@string/TypeColon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_type"
                android:layout_weight="1"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/Placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_result_type"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
